=== master

* Consider all unique constraints when marking columns as non-NULL on DB2 (jeremyevans)

* Numerous minor performance improvements, mostly from rubocop-performance (jeremyevans)

=== 5.93.0 (2025-06-01)

* Add support to Dataset#explain for all PostgreSQL EXPLAIN options (jeremyevans)

* Make Dataset#{explain,analyze} work with the pg_auto_parameterize extension (jeremyevans)

* Support multilevel qualified identifiers in Database#create_table (jeremyevans)

* Add Sequel::OLD and Sequel::NEW constants, for use in RETURNING statements on PostgreSQL 18+ (jeremyevans)

* Fix SQL::QualifiedIdentifier handling of SQL::Identifier wrapping LiteralString values (jeremyevans)

* Fix literalization of SQL::Identifier wrapping LiteralString values (jeremyevans)

* Add Dataset#prepare_sql_type for setting the SQL type to use for prepare/call (jeremyevans)

=== 5.92.0 (2025-05-01)

* Use a qualified primary key for Model.paged_each and for the paged_operations plugin when using joined datasets (jeremyevans, davekaro) (#2299, #2300)

* Add Model.qualified_primary_key for returning a qualified version of the model's primary key (jeremyevans)

* Support sql_literal_allow_caching? method on objects that respond to sql_literal_append/sql_literal (jeremyevans)

* Support set_column_not_null as a reversible migration method (jeremyevans)

=== 5.91.0 (2025-04-01)

* Recognize datetime(N) types as :datetime again (broke in 5.32) (jeremyevans) (#2293)

* Fix possible concurrency issue in eager loading due to Method#hash iterating over a hash that can be inserted into concurrently (jeremyevans) (#2292)

* Add pg_auto_validate_enums plugin for automatically validating enum values on PostgreSQL (jeremyevans)

* Make pg_auto_constraint_validations cache file creation deterministic by sorting subhashes (jeremyevans)

* Support treat_string_list_as_untyped_array Database option in pg_auto_parameterize_in_array extension (jeremyevans)
