@@ -1,5 +1,7 @@
 === master
 
+* Support :primary_key and :unique column options accepting hash value for constraint options (jeremyevans)
+
 * Consider all unique constraints when marking columns as non-NULL on DB2 (jeremyevans)
 
 * Numerous minor performance improvements, mostly from rubocop-performance (jeremyevans)
